feat: implemented recaptcha middle api call

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>DedoAI - SSO</title>
+  <script src="https://www.google.com/recaptcha/enterprise.js?render=%VITE_RECAPTCHA_KEY%"></script>
 </head>
 
 <body>
